Training-K8s-Apr-2022/YAMLS/services/GuestBook/istio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: istio-ingress
spec:
  rules:
  - host: guest2.mouliveera.com
    http:
      paths:
      - path: /demo
        backend:
          serviceName: frontend
          servicePort: 80
